chore(backend): add Spotless (google-java-format) as the CI lint tool
Reformats the whole backend to a consistent style so `mvn verify`'s
spotless:check gate has a clean baseline. google-java-format needs
JDK internals access on 16+, and its bundled default in spotless
2.44.2 hits a NoSuchMethodError on JDK 25's javac -- pinned a newer
google-java-format (1.27.0) and added the standard --add-exports/
--add-opens flags via .mvn/jvm.config to fix it.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>